# checkers_mcts

./: .gitignore  CLAUDE.md  Inital_architecture.md  LICENSE  README.md  agents_benchmark_report.md  benchmark_agents.py  debug_captures.py  main.py  pyproject.toml
.github/workflows/: ci.yml
ai/: ai_process.py  base_agent.py  mcts_agent.py  minimax_agent.py  random_agent.py
engine/: _numba_compat.py  bitboard.py  fast_rollout.py  game_logic.py  move_generator.py
models/: board_state.py  config.py
tests/: conftest.py  test_agents.py  test_ai_process.py  test_bitboard.py  test_config.py  test_fast_rollout.py  test_game_logic.py  test_main.py  test_menu.py  test_models.py  test_move_generator.py  test_renderer.py
ui/: menu.py  renderer.py
