[project]
name = "checkers-mcts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6",
    "pydantic>=2.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
fast = [
    "numba>=0.60",  # JIT dla MCTS – wymaga LLVM 14/15, dodać przed Fazą 4
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "ai", "models", "ui"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
]
